# DistributedFFT

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  benchmarks_todo.txt  config.json  hostfile  job.json  launch.py  launch_modules.sh  launch_old.py  score-p.txt  temp.py  temp.txt
benchmarks/: pencil.csv  slab.csv  slab_y_then_zx.csv  slab_z_then_yx.csv  slab_z_then_yx_opt1.csv
benchmarks/argon/: pencil.6067.out  slab.6066.out  slab.7239.out
benchmarks/krypton/: pencil.6061.out  slab.6060.out  slab.7238.out
benchmarks/pcsgs/: out.txt  out0.txt  out1.txt  out2.txt
benchmarks_krypton/pencil/: test_0_0_0_0_0_128_0_2_2.csv  test_0_0_0_0_0_128_1_2_2.csv  test_0_0_0_0_0_256_0_2_2.csv  test_0_0_0_0_0_256_1_2_2.csv  test_0_0_0_0_0_32_0_2_2.csv  test_0_0_0_0_0_32_1_2_2.csv  test_0_0_0_0_0_512_0_2_2.csv  test_0_0_0_0_0_512_1_2_2.csv  test_0_0_0_0_0_64_0_2_2.csv  test_0_0_0_0_0_64_1_2_2.csv  test_0_0_0_0_1_128_0_2_2.csv  test_0_0_0_0_1_128_1_2_2.csv  test_0_0_0_0_1_256_0_2_2.csv  test_0_0_0_0_1_256_1_2_2.csv  test_0_0_0_0_1_32_0_2_2.csv  test_0_0_0_0_1_32_1_2_2.csv  test_0_0_0_0_1_512_0_2_2.csv  test_0_0_0_0_1_512_1_2_2.csv  test_0_0_0_0_1_64_0_2_2.csv  test_0_0_0_0_1_64_1_2_2.csv  test_0_0_0_0_2_128_0_2_2.csv  test_0_0_0_0_2_128_1_2_2.csv  test_0_0_0_0_2_256_0_2_2.csv  test_0_0_0_0_2_256_1_2_2.csv  test_0_0_0_0_2_32_0_2_2.csv  test_0_0_0_0_2_32_1_2_2.csv  test_0_0_0_0_2_512_0_2_2.csv  test_0_0_0_0_2_512_1_2_2.csv  test_0_0_0_0_2_64_0_2_2.csv  test_0_0_0_0_2_64_1_2_2.csv  test_0_0_0_1_0_128_0_2_2.csv  test_0_0_0_1_0_128_1_2_2.csv  test_0_0_0_1_0_256_0_2_2.csv  test_0_0_0_1_0_256_1_2_2.csv  test_0_0_0_1_0_32_0_2_2.csv  test_0_0_0_1_0_32_1_2_2.csv  test_0_0_0_1_0_512_0_2_2.csv  test_0_0_0_1_0_512_1_2_2.csv  test_0_0_0_1_0_64_0_2_2.csv  test_0_0_0_1_0_64_1_2_2.csv  (+460 more)
benchmarks_krypton/slab_default/: test_0_0_0_128_0_4.csv  test_0_0_0_128_1_4.csv  test_0_0_0_256_0_4.csv  test_0_0_0_256_1_4.csv  test_0_0_0_32_0_4.csv  test_0_0_0_32_1_4.csv  test_0_0_0_512_0_4.csv  test_0_0_0_512_1_4.csv  test_0_0_0_64_0_4.csv  test_0_0_0_64_1_4.csv  test_0_0_1_128_0_4.csv  test_0_0_1_128_1_4.csv  test_0_0_1_256_0_4.csv  test_0_0_1_256_1_4.csv  test_0_0_1_32_0_4.csv  test_0_0_1_32_1_4.csv  test_0_0_1_512_0_4.csv  test_0_0_1_512_1_4.csv  test_0_0_1_64_0_4.csv  test_0_0_1_64_1_4.csv  test_0_0_2_128_0_4.csv  test_0_0_2_128_1_4.csv  test_0_0_2_256_0_4.csv  test_0_0_2_256_1_4.csv  test_0_0_2_32_0_4.csv  test_0_0_2_32_1_4.csv  test_0_0_2_512_0_4.csv  test_0_0_2_512_1_4.csv  test_0_0_2_64_0_4.csv  test_0_0_2_64_1_4.csv  test_0_1_0_128_0_4.csv  test_0_1_0_128_1_4.csv  test_0_1_0_256_0_4.csv  test_0_1_0_256_1_4.csv  test_0_1_0_32_0_4.csv  test_0_1_0_32_1_4.csv  test_0_1_0_512_0_4.csv  test_0_1_0_512_1_4.csv  test_0_1_0_64_0_4.csv  test_0_1_0_64_1_4.csv  (+60 more)
benchmarks_krypton/slab_z_then_yx/: test_0_0_0_128_0_4.csv  test_0_0_0_128_1_4.csv  test_0_0_0_256_0_4.csv  test_0_0_0_256_1_4.csv  test_0_0_0_32_0_4.csv  test_0_0_0_32_1_4.csv  test_0_0_0_512_0_4.csv  test_0_0_0_512_1_4.csv  test_0_0_0_64_0_4.csv  test_0_0_0_64_1_4.csv  test_0_0_1_128_0_4.csv  test_0_0_1_128_1_4.csv  test_0_0_1_256_0_4.csv  test_0_0_1_256_1_4.csv  test_0_0_1_32_0_4.csv  test_0_0_1_32_1_4.csv  test_0_0_1_512_0_4.csv  test_0_0_1_512_1_4.csv  test_0_0_1_64_0_4.csv  test_0_0_1_64_1_4.csv  test_0_0_2_128_0_4.csv  test_0_0_2_128_1_4.csv  test_0_0_2_256_0_4.csv  test_0_0_2_256_1_4.csv  test_0_0_2_32_0_4.csv  test_0_0_2_32_1_4.csv  test_0_0_2_512_0_4.csv  test_0_0_2_512_1_4.csv  test_0_0_2_64_0_4.csv  test_0_0_2_64_1_4.csv  test_0_1_0_128_0_4.csv  test_0_1_0_128_1_4.csv  test_0_1_0_256_0_4.csv  test_0_1_0_256_1_4.csv  test_0_1_0_32_0_4.csv  test_0_1_0_32_1_4.csv  test_0_1_0_512_0_4.csv  test_0_1_0_512_1_4.csv  test_0_1_0_64_0_4.csv  test_0_1_0_64_1_4.csv  (+60 more)
benchmarks_pcsgs/pencil/: test_0_0_0_0_0_128_0_2_2.csv  test_0_0_0_0_0_128_1_2_2.csv  test_0_0_0_0_0_256_0_2_2.csv  test_0_0_0_0_0_256_1_2_2.csv  test_0_0_0_0_0_32_0_2_2.csv  test_0_0_0_0_0_32_1_2_2.csv  test_0_0_0_0_0_512_0_2_2.csv  test_0_0_0_0_0_512_1_2_2.csv  test_0_0_0_0_0_64_0_2_2.csv  test_0_0_0_0_0_64_1_2_2.csv  test_0_0_0_0_1_128_0_2_2.csv  test_0_0_0_0_1_128_1_2_2.csv  test_0_0_0_0_1_256_0_2_2.csv  test_0_0_0_0_1_256_1_2_2.csv  test_0_0_0_0_1_32_0_2_2.csv  test_0_0_0_0_1_32_1_2_2.csv  test_0_0_0_0_1_512_0_2_2.csv  test_0_0_0_0_1_512_1_2_2.csv  test_0_0_0_0_1_64_0_2_2.csv  test_0_0_0_0_1_64_1_2_2.csv  test_0_0_0_0_2_128_0_2_2.csv  test_0_0_0_0_2_128_1_2_2.csv  test_0_0_0_0_2_256_0_2_2.csv  test_0_0_0_0_2_256_1_2_2.csv  test_0_0_0_0_2_32_0_2_2.csv  test_0_0_0_0_2_32_1_2_2.csv  test_0_0_0_0_2_512_0_2_2.csv  test_0_0_0_0_2_512_1_2_2.csv  test_0_0_0_0_2_64_0_2_2.csv  test_0_0_0_0_2_64_1_2_2.csv  test_0_0_0_1_0_128_0_2_2.csv  test_0_0_0_1_0_128_1_2_2.csv  test_0_0_0_1_0_256_0_2_2.csv  test_0_0_0_1_0_256_1_2_2.csv  test_0_0_0_1_0_32_0_2_2.csv  test_0_0_0_1_0_32_1_2_2.csv  test_0_0_0_1_0_512_0_2_2.csv  test_0_0_0_1_0_512_1_2_2.csv  test_0_0_0_1_0_64_0_2_2.csv  test_0_0_0_1_0_64_1_2_2.csv  (+460 more)
benchmarks_pcsgs/slab_default/: test_0_0_0_128_0_4.csv  test_0_0_0_128_1_4.csv  test_0_0_0_256_0_4.csv  (+97 more)
benchmarks_temp/: test_0_0_0_0_0_128_1_2_2.csv  test_0_0_0_0_0_256_1_2_2.csv  test_0_0_0_0_0_32_1_2_2.csv  test_0_0_0_0_0_64_1_2_2.csv
evaluation/: plot.py  plot_comm_methods.py  plot_complete.py
include/: cufft.hpp  mpicufft.hpp  mpicufft_pencil.hpp  mpicufft_pencil_opt1.hpp  mpicufft_slab.hpp  mpicufft_slab_1d2d.hpp  mpicufft_slab_opt1.hpp  mpicufft_slab_y_then_zx.hpp  mpicufft_slab_z_then_yx.hpp  mpicufft_slab_z_then_yx_opt1.hpp  mpicufft_slabs.hpp  mpicufftslabs.hpp  params.hpp  timer.hpp
jobs/: pencil_krypton.json  reference.json  reference_pcsgs.json  reference_pcsgs1.json  slab_default_krypton.json  slab_y_then_zx_krypton.json  slab_z_then_yx_krypton.json
mpi/: hostfile_0  hostfile_argon  hostfile_krypton  hostfile_pcsgs  rankfile_0  rankfile_argon  rankfile_krypton
src/: mpicufft.cpp  mpicufft_pencil.cpp  mpicufft_slab.cpp  mpicufft_slab_1d2d.cpp  mpicufft_slab_z_then_yx.cpp  mpicufft_slabs.cpp  mpicufftslabs.cpp  timer.cpp
tests/: base.cu  main.cpp  random.cu  random_dist.cu
(+32179 files in other folders)
